# constduck

./: Cargo.toml  README.md
constduck/: Cargo.toml
constduck-procmacro/: Cargo.toml
constduck-procmacro/src/: derive.rs  lib.rs
constduck/examples/: construct-instances.rs  custom-default.rs  debug-print.rs
constduck/src/: lib.rs
